--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -31,17 +31,17 @@ features:
 
   - id: self-charge
     title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus&nbsp;UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    description: The Lexus&nbsp;UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by the latest Lexus self-charging hybrid technology which delivers a responsive yet efficient drive with the combination of the 2.0 litre engine and powerful electric motor.
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: performance
     title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The all-new Lexus&nbsp;UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide an exhilarating driving experience that you simply wouldn’t expect from an SUV– agile, powerful and responsive, delivering an impressive 53.2 mpg, ideal for saving during a weekend away.
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: design
     title: Intelligent Design
-    description: The Lexus&nbsp;UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus&nbsp;UX is a stylish, sophisticated addition to your adventure.
+    description: The Lexus&nbsp;UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A new take on the compact SUV built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: city
@@ -51,7 +51,7 @@ features:
 
   - id: technology
     title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: saftey
