lexus tracking links

--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -22,7 +22,7 @@ intro-links:
     id: configure
 
   - title: Find Out More
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
     id: find-out-more
 
 feature-cta: Find Out More
@@ -32,32 +32,32 @@ features:
   - id: self-charge
     title: No Plugs. No Diesel. No Compromise.
     description: The Lexus&nbsp;UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by the latest Lexus self-charging hybrid technology which delivers a responsive yet efficient drive with the combination of the 2.0 litre engine and powerful electric motor.
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: performance
     title: Exhilarating Performance
     description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide an exhilarating driving experience that you simply wouldn’t expect from an SUV– agile, powerful and responsive, delivering an impressive 53.2 mpg, ideal for saving during a weekend away.
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: design
     title: Intelligent Design
     description: The Lexus&nbsp;UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A new take on the compact SUV built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: city
     title: Perfect for the City
     description: The Lexus&nbsp;UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: technology
     title: Imaginative Technology
     description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: saftey
     title: Progress with Confidence
     description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.co.uk/car-models/ux/?mc=C7523
 
   - id: config
     title: Configurator
