--- a/_pages/index.html
+++ b/_pages/index.html
@@ -25,9 +25,9 @@ country-list:
     title: Sverige
     link: https://www.secretescapes.com/lexus-design-collection/se/
 
-  # - id: uk
-  #   title: United Kingdom
-  #   link: https://www.secretescapes.com/lexus-design-collection/uk/
+  - id: uk
+    title: United Kingdom
+    link: https://www.secretescapes.com/lexus-design-collection/uk/
 ---
 
 <div class="home">
