territory specific links

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -7,23 +7,23 @@ country-list:
 
   - id: de
     title: Deutschland
-    link: https://www.secretescapes.com/lexus-design-collection/de/
+    link: https://www.secretescapes.de/lexus-design-collection/de/
 
   - id: es
     title: España
-    link: https://www.secretescapes.com/lexus-design-collection/es/
+    link: https://es.secretescapes.com/lexus-design-collection/es/
 
   - id: it
     title: Italia
-    link: https://www.secretescapes.com/lexus-design-collection/it/
+    link: https://it.secretescapes.com/lexus-design-collection/it/
 
   - id: "no"
     title: Norge
-    link: https://www.secretescapes.com/lexus-design-collection/no/
+    link: https://no.secretescapes.com/lexus-design-collection/no/
 
   - id: se
     title: Sverige
-    link: https://www.secretescapes.com/lexus-design-collection/se/
+    link: https://www.secretescapes.se/lexus-design-collection/se/
 
   - id: uk
     title: United Kingdom
